<resources>
    <string name="app_name">Cardio Diary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Кардіо щоденник</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="daily_diary">Щоденник</string>
    <string name="medical_record">Архів</string>
    <string name="reminders">Нагадування</string>
    <string name="statistic">Статистика</string>
    <string name="at_control">Контроль АТ</string>
    <string name="diastolic">Діастолічний</string>
    <string name="systolic">Систолічний</string>
    <string name="pulse">Пульс</string>
    <string name="date">Дата</string>
    <string name="frequency">Частота</string>
    <string name="time">Час</string>
    <string name="next">Далі</string>
    <string name="symptom_control">Контроль симптомів</string>
    <string name="heart_pain">1) Біль в ділянці серця</string>
    <string name="nature_of_pain">- характер:</string>
    <string name="compressing">Стискаючий</string>
    <string name="aching">Ниючий</string>
    <string name="barbed">Колючий</string>
    <string name="pressing">Давлячий</string>
    <string name="burning">Пекучий</string>
    <string name="another_type">Інший варіант</string>
    <string name="description">Опис</string>
    <string name="localization">- локалізація:</string>
    <string name="left_half">Ліва половина грудної клітки</string>
    <string name="behind_the_chest">За грудиною</string>
    <string name="top_heart">Верхівка серця</string>
    <string name="irradiation">- іррадіація(куди віддає):</string>
    <string name="left_hand">Ліва рука</string>
    <string name="left_shoulder_blade">Ліва лопатка</string>
    <string name="right_half">Права половина грудної клітки</string>
    <string name="larynx">Гортань</string>
    <string name="jaw">Щелепа</string>
    <string name="intensity">- інтенсивність:</string>
    <string name="duration">- тривалість:</string>
    <string name="condition">- умови виникнення:</string>
    <string name="exercise">Фізичне навантаження</string>
    <string name="psycho_stress">Психоемоційне навантаження</string>
    <string name="turning_body">Під час повороту тулуба</string>
    <string name="drinking_alcohol">Після вживання алкоголю</string>
    <string name="calm">В спокою</string>
    <string name="interruptions">2) Відчуття перебоїв в роботі серця</string>
    <string name="palpitation">3) Серцебиття</string>
    <string name="headache">4) Головний біль</string>
    <string name="dyspnea">5) Задишка</string>
    <string name="expiratory">Експіраторна(важко зробити вдих)</string>
    <string name="inspiratory">Інспіраторна(важко зробити видих)</string>
    <string name="dizziness">6) Запаморочення</string>
    <string name="loss_of_consciousness">7) Втрата свідомості</string>
    <string name="edema">8) Набряки</string>
    <string name="symmetric">Симетричні</string>
    <string name="asymmetric">Асиметричні</string>
    <string name="day_condition">Стан за день</string>
    <string name="feelings">1) Самопочуття</string>
    <string name="activity">2) Активність</string>
    <string name="mood">3) Настрій</string>
    <string name="anxiety">4) Тривожність</string>
    <string name="irritation">5) Роздратування</string>
    <string name="concentration">6) Труднощі з концентрацією</string>
    <string name="fatigue">7) Втома</string>
    <string name="psychoemotional_stress">8) Психоемоційне напруження</string>
    <string name="sleep">9) Сон</string>
    <string name="save">Зберегти</string>
    <string name="medical_record_title">Запис в медичній картці</string>
    <string name="drug_admission">Прийом ліків</string>
    <string name="quality_instruction">Згадайте будь-ласка ті подій,\nщо відбувалися із вами за останні 30 днів.\nВраховуючи їх, на скільки ви були задоволені наступим із нижчеперечисленого\nВкажіть ту кількість балів яка підходить найбільше(0-10)\n\n0 - зовсім незадоволений/а\n1-3 - більше незадоволений/а ніж задоволений/а\n4-6 - посередньо\n7-9 - більше задоволений/а ніж незадоволений/а\n10 - надзвичайно задоволений/а
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="record_date">01.01.1970</string>
    <string name="control_at">Вимірюваня АТ</string>
    <string name="taking_medication">Прийом ліків</string>
    <string name="survey">Обстеження</string>
    <string name="visit_to_a_doctor">Візит до лікаря</string>
    <string name="filling_out_the_diary">Заповнення щоденника</string>
    <string name="about_five">До 5 хв.</string>
    <string name="from_five">Від 5 хв до 10 хв</string>
    <string name="more_thirty">Більше 30 хв.</string>
    <string name="quality_of_life">Якість життя</string>
</resources>
