<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reminders"
            android:icon="@drawable/icon_2"
            android:title="@string/reminders" />
        <item
            android:id="@+id/nav_diary"
            android:icon="@drawable/icon_1"
            android:title="@string/daily_diary" />
        <item
            android:id="@+id/nav_medical_record"
            android:icon="@drawable/icon_3"
            android:title="@string/medical_record" />
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/icon_4"
            android:title="@string/statistic"
            />
        <item
            android:id="@+id/nav_quality"
            android:icon="@mipmap/ic_quality"
            android:title="@string/quality_of_life"
            />
    </group>

</menu>
