<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <import type="android.text.TextUtils"/>
        <variable
            name="viewModel"
            type="com.valsoft.cardiodiary.presentation.viewmodel.diary.questionary.DailyFormViewModel"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_condition"
                android:textSize="18sp"
                android:layout_marginBottom="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feelings"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <SeekBar
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:layout_weight="0.5"
                    android:layout_gravity="center"
                    android:progress="@={viewModel.feelings}"
                    />
                <TextView
                    android:id="@+id/timeCounter"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:text="@{String.valueOf(viewModel.feelings)}"
                    android:background="@drawable/background_seekbar_counter"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginStart="24dp"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <SeekBar
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:layout_weight="0.5"
                    android:layout_gravity="center"
                    android:progress="@={viewModel.activity}"
                    />
                <TextView
                    android:id="@+id/timeCounter2"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@{String.valueOf(viewModel.activity)}"
                    android:background="@drawable/background_seekbar_counter"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginStart="24dp"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mood"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <SeekBar
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:layout_weight="0.5"
                    android:layout_gravity="center"
                    android:progress="@={viewModel.mood}"
                    />
                <TextView
                    android:id="@+id/timeCounter3"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@{String.valueOf(viewModel.mood)}"
                    android:background="@drawable/background_seekbar_counter"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginStart="24dp"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anxiety"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <SeekBar
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:layout_weight="0.5"
                    android:layout_gravity="center"
                    android:progress="@={viewModel.anxiety}"
                    />
                <TextView
                    android:id="@+id/timeCounter4"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@{String.valueOf(viewModel.anxiety)}"
                    android:background="@drawable/background_seekbar_counter"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginStart="24dp"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/irritation"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <SeekBar
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:layout_weight="0.5"
                    android:layout_gravity="center"
                    android:progress="@={viewModel.irritation}"
                    />
                <TextView
                    android:id="@+id/timeCounter5"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@{String.valueOf(viewModel.irritation)}"
                    android:background="@drawable/background_seekbar_counter"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginStart="24dp"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/concentration"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <SeekBar
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:layout_weight="0.5"
                    android:layout_gravity="center"
                    android:progress="@={viewModel.concentration}"
                    />
                <TextView
                    android:id="@+id/timeCounter6"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@{String.valueOf(viewModel.concentration)}"
                    android:background="@drawable/background_seekbar_counter"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginStart="24dp"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fatigue"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <SeekBar
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:layout_weight="0.5"
                    android:layout_gravity="center"
                    android:progress="@={viewModel.fatigue}"
                    />
                <TextView
                    android:id="@+id/timeCounter7"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@{String.valueOf(viewModel.fatigue)}"
                    android:background="@drawable/background_seekbar_counter"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginStart="24dp"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/psychoemotional_stress"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <SeekBar
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:layout_weight="0.5"
                    android:layout_gravity="center"
                    android:progress="@={viewModel.psychoemotionalStress}"
                    />
                <TextView
                    android:id="@+id/timeCounter8"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@{String.valueOf(viewModel.psychoemotionalStress)}"
                    android:background="@drawable/background_seekbar_counter"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginStart="24dp"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9) Якість сну"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <SeekBar
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:layout_weight="0.5"
                    android:layout_gravity="center"
                    android:progress="@={viewModel.sleep}"
                    />
                <TextView
                    android:id="@+id/timeCounter9"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@{String.valueOf(viewModel.sleep)}"
                    android:background="@drawable/background_seekbar_counter"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginStart="24dp"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black"
                android:layout_marginBottom="8dp"/>
            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/save"
                android:onClick="@{() -> viewModel.saveData()}"/>
        </LinearLayout>

    </ScrollView>
</layout>

